--- a/Mvc.Grid.Web/Views/Column/DefaultMethod.cshtml
+++ b/Mvc.Grid.Web/Views/Column/DefaultMethod.cshtml
@@ -14,11 +14,11 @@
             .Grid(Model)
             .Build(columns =>
             {
-                columns.Add(model => model.Name).WithDefaultFilterMethod("equals");
-                columns.Add(model => model.Surname).WithDefaultFilterMethod("contains");
+                columns.Add(model => model.Name).UsingDefaultFilterMethod("equals");
+                columns.Add(model => model.Surname).UsingDefaultFilterMethod("contains");
                 columns.Add(model => model.MaritalStatus);
 
-                columns.Add(model => model.Age).WithDefaultFilterMethod("less-than-or-equal");
+                columns.Add(model => model.Age).UsingDefaultFilterMethod("less-than-or-equal");
                 columns.Add(model => model.Birthday).Formatted("{0:d}");
                 columns.Add(model => model.IsWorking);
             })
@@ -42,11 +42,11 @@
     .Grid(Model)
     .Build(columns =>
     {
-        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>).WithDefaultFilterMethod(<span class="str">"equals"</span>);
-        columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>).WithDefaultFilterMethod(<span class="str">"contains"</span>);
+        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>).UsingDefaultFilterMethod(<span class="str">"equals"</span>);
+        columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>).UsingDefaultFilterMethod(<span class="str">"contains"</span>);
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
-        columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>).WithDefaultFilterMethod(<span class="str">"less-than-or-equal"</span>);
+        columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>).UsingDefaultFilterMethod(<span class="str">"less-than-or-equal"</span>);
         columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
