--- a/Mvc.Grid.Web/Views/Column/MultiFiltering.cshtml
+++ b/Mvc.Grid.Web/Views/Column/MultiFiltering.cshtml
@@ -14,12 +14,12 @@
             .Grid(Model)
             .Build(columns =>
             {
-                columns.Add(model => model.Name).MultiFilterable(true);
+                columns.Add(model => model.Name).Filterable(GridFilterType.Double);
                 columns.Add(model => model.Surname).Filterable(true);
-                columns.Add(model => model.MaritalStatus);
+                columns.Add(model => model.MaritalStatus).Filterable(GridFilterType.Multi);
 
-                columns.Add(model => model.Age).MultiFilterable(true);
-                columns.Add(model => model.Birthday).MultiFilterable(true);
+                columns.Add(model => model.Age).Filterable(GridFilterType.Double);
+                columns.Add(model => model.Birthday).Filterable(GridFilterType.Double);
                 columns.Add(model => model.IsWorking).Filterable(true);
             })
             .Empty("No data found")
@@ -41,12 +41,12 @@
     .Grid(Model)
     .Build(columns =>
     {
-        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>).MultiFilterable(<span class="kwd">true</span>);
+        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>).Filterable(<span class="cls">GridFilterType</span>.Double);
         columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>).Filterable(<span class="kwd">true</span>);
-        columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
+        columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>).Filterable(<span class="cls">GridFilterType</span>.Multi);
 
-        columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>).MultiFilterable(<span class="kwd">true</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).MultiFilterable(<span class="kwd">true</span>);
+        columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>).Filterable(<span class="cls">GridFilterType</span>.Double);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Filterable(<span class="cls">GridFilterType</span>.Double);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>).Filterable(<span class="kwd">true</span>);
     })
     .Empty(<span class="str">"No data found"</span>)
