--- a/Mvc.Grid.Web/Views/Grid/Localization.cshtml
+++ b/Mvc.Grid.Web/Views/Grid/Localization.cshtml
@@ -23,8 +23,7 @@
                 columns.Add(model => model.IsWorking).Titled("Employé");
             })
             .Empty("Aucune donnée disponible")
-            .MultiFilterable()
-            .Filterable()
+            .Filterable(GridFilterType.Double)
             .Sortable()
         )
     </div>
@@ -75,8 +74,7 @@
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employé"</span>);
     })
     .Empty(<span class="str">"Aucune donnée disponible"</span>)
-    .MultiFilterable()
-    .Filterable()
+    .Filterable(<span class="cls">GridFilterType</span>.Double)
     .Sortable()
 )
 </code>
@@ -147,5 +145,5 @@
 </div>
 
 @section scripts {
-    <script src="~/Scripts/MvcGrid/Cultures/mvc-grid.culture.fr.js"></script>
+    <script src="~/js/mvc-grid/cultures/mvc-grid.culture.fr.js"></script>
 }
