--- a/Mvc.Grid.Web/Views/Grid/_AjaxSearchGrid.cshtml
+++ b/Mvc.Grid.Web/Views/Grid/_AjaxSearchGrid.cshtml
@@ -12,5 +12,6 @@
         columns.Add(model => model.Birthday).Formatted("{0:d}");
         columns.Add(model => model.IsWorking);
     })
+    .Empty("No data found")
     .Sortable()
 )
