--- a/Mvc.Grid.Web/Views/Home/Index.cshtml
+++ b/Mvc.Grid.Web/Views/Home/Index.cshtml
@@ -99,7 +99,7 @@
 
     <span class="kwd">public void</span> OnGet()
     {
-        People = <span class="cls">PeopleRepository</span>.GetPeople();
+        People = repository.GetPeople();
     }
 }
 </code>
