--- a/Mvc.Grid.Web/Views/Javascript/Reload.cshtml
+++ b/Mvc.Grid.Web/Views/Javascript/Reload.cshtml
@@ -93,7 +93,7 @@ document.getElementById(<span class="str">'ContentRefresh'</span>).addEventListe
 [<span class="cls">HttpGet</span>]
 <span class="kwd">public</span> <span class="cls">PartialViewResult</span> IndexGrid()
 {
-    <span class="kwd">return</span> PartialView(<span class="str">"_IndexGrid"</span>, <span class="cls">PeopleRepository</span>.GetPeople());
+    <span class="kwd">return</span> PartialView(<span class="str">"_IndexGrid"</span>, repository.GetPeople());
 }
 </code>
 </pre>
