--- a/Mvc.Grid.Web/wwwroot/css/shared/base.css
+++ b/Mvc.Grid.Web/wwwroot/css/shared/base.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background: url(../../Images/background.jpg);
+    background: url(../../img/background.jpg);
     font-family: 'Open Sans', sans-serif;
     background-repeat: no-repeat;
     background-size: cover;
