--- a/Mvc.Grid.Web/Views/Grid/RowAttributes.cshtml
+++ b/Mvc.Grid.Web/Views/Grid/RowAttributes.cshtml
@@ -22,7 +22,7 @@
                 columns.Add(model => model.Birthday).Formatted("{0:d}");
                 columns.Add(model => model.IsWorking);
             })
-            .RowAttributed(model => new { data_id = model.Id })
+            .RowAttributed(model => new { @class = model.IsWorking == true ? "bolded" : null, data_id = model.Id })
             .Css("table-hover")
         )
     </div>
@@ -51,7 +51,7 @@
         columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
-    .RowAttributed(model => <span class="kwd">new</span> { data_id = model.Id })
+    .RowAttributed(model => <span class="kwd">new</span> { @@class = model.IsWorking == <span class="kwd">true</span> ? <span class="str">"bolded"</span> : <span class="kwd">null</span>, data_id = model.Id })
 )
 </code>
 </pre>
