--- a/Mvc.Grid.Web/Views/Grid/_SourceUrlGrid.cshtml
+++ b/Mvc.Grid.Web/Views/Grid/_SourceUrlGrid.cshtml
@@ -12,7 +12,7 @@
         columns.Add(model => model.Birthday).Formatted("{0:d}");
         columns.Add(model => model.IsWorking);
     })
-    .WithSourceUrl(Url.Action("SourceUrl", "Grid"))
+    .UsingSourceUrl(Url.Action("SourceUrl", "Grid"))
     .Empty("No data found")
     .Pageable(pager =>
     {
