--- a/Mvc.Grid.Web/Views/Home/Installation.cshtml
+++ b/Mvc.Grid.Web/Views/Home/Installation.cshtml
@@ -55,16 +55,16 @@
             </p>
             <div class="row">
                 <div class="col">
-                    <pre><b>Windows:</b> %UserProfile%\.nuget\packages\NonFactors.Grid.Mvc6\{version}\content\Content\MvcGrid\</pre>
+                    <pre><b>Windows:</b> %UserProfile%\.nuget\packages\NonFactors.Grid.Mvc6\{version}\content\css\mvc-grid\</pre>
                 </div>
                 <div class="col">
-                    <pre><b>Linux/Mac:</b> ~/.nuget/packages/NonFactors.Grid.Mvc6/{version}/content/Content/MvcGrid/</pre>
+                    <pre><b>Linux/Mac:</b> ~/.nuget/packages/NonFactors.Grid.Mvc6/{version}/content/css/mvc-grid/</pre>
                 </div>
             </div>
             <pre>
 &lt;html&gt;
     &lt;head&gt;
-<b class="install-note">+       &lt;link href="~/Content/MvcGrid/mvc-grid.css" rel="stylesheet"&gt;</b>
+<b class="install-note">+       &lt;link href="~/css/mvc-grid/mvc-grid.css" rel="stylesheet"&gt;</b>
     &lt;/head&gt;
     &lt;body&gt;
         @@RenderBody()
@@ -75,21 +75,21 @@
             </p>
             <div class="row">
                 <div class="col">
-                    <pre><b>Windows:</b> %UserProfile%\.nuget\packages\NonFactors.Grid.Mvc6\{version}\content\Scripts\MvcGrid\</pre>
+                    <pre><b>Windows:</b> %UserProfile%\.nuget\packages\NonFactors.Grid.Mvc6\{version}\content\js\mvc-grid\</pre>
                 </div>
                 <div class="col">
-                    <pre><b>Linux/Mac:</b> ~/.nuget/packages/NonFactors.Grid.Mvc6/{version}/content/Scripts/MvcGrid/</pre>
+                    <pre><b>Linux/Mac:</b> ~/.nuget/packages/NonFactors.Grid.Mvc6/{version}/content/js/mvc-grid/</pre>
                 </div>
             </div>
             <pre>
 &lt;html&gt;
     &lt;head&gt;
-        &lt;link href="~/Content/MvcGrid/mvc-grid.css" rel="stylesheet"&gt;
+        &lt;link href="~/css/mvc-grid/mvc-grid.css" rel="stylesheet"&gt;
     &lt;/head&gt;
     &lt;body&gt;
         @@RenderBody()
 
-<b class="install-note">+       &lt;script src="~/Scripts/MvcGrid/mvc-grid.js"&gt;&lt;/script&gt;</b>
+<b class="install-note">+       &lt;script src="~/js/mvc-grid/mvc-grid.js"&gt;&lt;/script&gt;</b>
     &lt;/body&gt;
 &lt;/html&gt;</pre>
             <p>
@@ -98,12 +98,12 @@
             <pre>
 &lt;html&gt;
     &lt;head&gt;
-        &lt;link href="~/Content/MvcGrid/mvc-grid.css" rel="stylesheet"&gt;
+        &lt;link href="~/css/mvc-grid/mvc-grid.css" rel="stylesheet"&gt;
     &lt;/head&gt;
     &lt;body&gt;
         @@RenderBody()
 
-        &lt;script src="~/Scripts/MvcGrid/mvc-grid.js"&gt;&lt;/script&gt;
+        &lt;script src="~/js/mvc-grid/mvc-grid.js"&gt;&lt;/script&gt;
         &lt;script&gt;
 <b class="install-note">+           [].forEach.call(document.getElementsByClassName('mvc-grid'), function (element) {
 +               new MvcGrid(element);
