--- a/Mvc.Grid.Web/Views/_ViewImports.cshtml
+++ b/Mvc.Grid.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using System.Reflection;
+﻿@using System.Data;
+@using System.Reflection;
 @using NonFactors.Mvc.Grid;
 @using NonFactors.Mvc.Grid.Web;
 @using NonFactors.Mvc.Grid.Web.Models;
